<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notes</string>
    <string name="app_title">My Notes</string>
    <string name="ukrainian_lanuage">Ukrainian</string>
    <string name="enlish_lanuage">English</string>
    <string name="status_imp_all">All</string>
    <string name="status_imp_low">Low</string>
    <string name="status_imp_mid">Medium</string>
    <string name="status_imp_high">High</string>
    <string name="change_language_label">Change language</string>
    <string name="icon_label">Image</string>
    <string name="importance_label">Priority</string>
    <string name="title_label">Title</string>
    <string name="title_placeholder">Some title</string>
    <string name="description_placeholder">Enter description</string>
    <string name="save_btn_txt">Save</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="delete_btn_txt">Delete</string>
    <string name="edit_page_label">Edit note page</string>
    <string name="add_page_label">Add note</string>
    <string name="select_btn_lable">Select image</string>
    <string name="delete_btn_lable">Delete image</string>
    <string name="delete_message">Do you want delete member?</string>
    <string name="search_button_text">Search</string>
    <string name="description_label">Description</string>
</resources>